force-app/main/default/objects/Paused_OB_Campaign_History__c/Paused_OB_Campaign_History__c.object-meta.xml
<CustomObject>
    <label>Paused OB Campaign History</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Paused OB Campaign History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Paused OB Campaign History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>