force-app/main/default/objects/Paused_OB_Campaign_History__c/fields/Pause_Active__c.field-meta.xml
<CustomField>
    <fullName>Pause_Active__c</fullName>
    <formula>Opportunity__r.Scheduling_Paused__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pause Active</label>
    <type>Checkbox</type>
</CustomField>