force-app/main/default/objects/Paused_OB_Campaign_History__c/fields/Scheduling_Paused_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Paused_Start_Date__c</fullName>
    <formula>Opportunity__r.OB_Campaign_Scheduling_Paused_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduling Paused Start Date</label>
    <type>Date</type>
</CustomField>