force-app/main/default/objects/Paused_OB_Campaign_History__c/recordTypes/Full_Campaign_Paused.recordType-meta.xml
<RecordType>
    <fullName>Full_Campaign_Paused</fullName>
    <active>true</active>
    <label>Full Campaign Paused</label>
</RecordType>