force-app/main/default/objects/Paused_OB_Campaign_History__c/recordTypes/Scheduling_Paused.recordType-meta.xml
<RecordType>
    <fullName>Scheduling_Paused</fullName>
    <active>true</active>
    <label>Scheduling Paused</label>
</RecordType>